Add a base Benchmark and CreationBenchmark type
These will allow us to make benchmarks more succinct without adding too
much complexity.

Change-Id: I5b38dfc388d1d56780eb107d36060d3e1c23cdea
Reviewed-by: Gunnar Sletta <gunnar@crimson.no>

--- a/src/qmlbench.qrc
+++ b/src/qmlbench.qrc
@@ -4,5 +4,7 @@
     <file>Shell_SustainedFpsWithCount.qml</file>
     <file>Shell_SustainedFpsWithStaticCount.qml</file>
     <file>Shell_TotalFramesWithStaticCount.qml</file>
+    <file>Benchmark.qml</file>
+    <file>CreationBenchmark.qml</file>
   </qresource>
 </RCC>
