Add a V8Benchmark type to QmlBench import
This is going to be used to run v8-bench benchmarks using qmlbench as a harness.

This reverts commit 156cdf3b2ec213843f13240c160bcb25144a12c2.

Change-Id: Ieae04fd9fd968ac7bc419767afbf235b67242779
Reviewed-by: Simon Hausmann <simon.hausmann@qt.io>

--- a/src/qmlbench.qrc
+++ b/src/qmlbench.qrc
@@ -6,5 +6,7 @@
     <file>Shell_TotalFramesWithStaticCount.qml</file>
     <file>Benchmark.qml</file>
     <file>CreationBenchmark.qml</file>
+    <file>V8Benchmark.qml</file>
+    <file>3rdparty/v8-bench.js</file>
   </qresource>
 </RCC>
